feat(backend): implement multi-model chat API and refactor project structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Combiner Interface</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Caminho corrigido para ser relativo à raiz do site -->
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -14,10 +15,7 @@
         <textarea id="prompt" placeholder="Enter your prompt..."></textarea>
 
         <select id="model" multiple>
-            <option value="llama-3.3-70b-versatile">LLaMA 70B</option>
-            <option value="llama3-8b-8192">LLaMA 8B</option>
-            <option value="gemma2-9b-it">Gemma 9B</option>
-            <option value="whisper-large-v3-turbo">Whisper Large</option>
+            <!-- Opções de modelo serão preenchidas dinamicamente pelo JavaScript -->
         </select>
         <p>Select multiple models by holding Ctrl (Windows) or Cmd (Mac)</p>
 
@@ -31,7 +29,8 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Caminho corrigido para ser relativo à raiz do site -->
+    <script src="/script.js"></script>
 </body>
 
 </html>
